Maincss file update

--- a/Teamplay_pre/src/main/webapp/main/MainStyle.css
+++ b/Teamplay_pre/src/main/webapp/main/MainStyle.css
@@ -55,25 +55,10 @@
 }
 /* 헤더 CSS 종료 */
 
-/* 슬라이드바에서 가져옴 다시 가져올것 수정함.*/
-.slideshow-container {
-	max-width: 1000px;
-	height: 450px;
-	position: relative;
-	margin: auto;
-}
-
-.mainContainer {
-	display : inline-block;
-	position : relative;
-	width : 75%;
-	left : 5%;
-	background-color: red;
-}
 /* sidebar CSS */
 #sidebarContainer {
 	position:absolute; 
-	top:610px; 
+	top:560px; 
 	right:50%; 
 	margin-right:-670px;
 	width : 13%;
@@ -86,9 +71,9 @@
 
 /* Footer CSS */
 .footer {
-    position:absolute;
+    position:relative;
     left: 0;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
 	padding: 30px 0 ;
 	
@@ -106,3 +91,90 @@
 	padding-left: 30px;
 }
 /* Footer CSS 종료 */
+
+/* mainslider CSS */
+* {
+	/* margin: 0; */
+	padding: 0;
+	box-sizing: border-box;
+}
+
+.slideshow-container {
+	max-width: 1000px;
+	max-height: 750px;
+	position: relative;
+	margin: auto;
+}
+
+.slideshow-container .mySlides img {
+	height: 400px;
+}
+
+.mySlides {
+	display: none;
+}
+
+.prev, .next {
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	margin-top: -22px;
+	padding: 16px;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+}
+
+.next {
+	right: 0;
+	border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+.text {
+	color: #f2f2f2;
+	font-size: 15px;
+	padding: 8px 12px;
+	position: absolute;
+	bottom: 8px;
+	width: 100%;
+	text-align: center;
+}
+
+.numbertext {
+	color: #f2f2f2;
+	font-size: 12px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
+}
+
+.dot {
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+	background-color: #717171;
+}
+
+.fade {
+	-webkit-animation-name: fade;
+	-webkit-animation-duration: 1.5s;
+	animation-name: fade;
+	animation-duration: 1.5s;
+}
+/* mainslider CSS 종료*/
