--- a/Teamplay_pre/src/main/webapp/main/MainStyle.css
+++ b/Teamplay_pre/src/main/webapp/main/MainStyle.css
@@ -1,107 +1,95 @@
 @charset "UTF-8";
-
 /* 헤더 CSS */
 .HeaderContainer {
 	width: 90%;
-	margin: 0 auto;
-	height: 150px;
+	margin : 0 auto;
+	height : 150px;	
 }
-
 .HeaderLogo {
 	display: inline-block;
-	width: 15%;
-	height: 80%;
-	position: relative;
-	left: 2%;
-	top: 5%;
+	width : 15%;
+	height : 80%;
+	position : relative;
+	left : 2%;
+	top : 5%;
 }
-
 .search {
-	display: inline-block;
-	width: 70%;
-	height: 20%;
-	position: relative;
-	top: 38%;
-	left: 3%;
+	display : inline-block;
+	width : 70%;
+	height : 20%;
+	position : relative;
+	top : 38%;
+	left : 3%;
 }
 
 .searchbox {
-	width: 90%;
-	height: 100%;
-	border-radius: 0.2em;
+	width : 90%;
+	height : 100%;
+	border-radius : 0.2em;
 }
 
-.searchBtn {
-	width: 38px;
-	height: 100%;
-	background-color: #9bb7d6;
-	border-radius: 0.5em;
+.searchBtn{
+	width : 38px ;
+	height : 100%;
+	background-color: #9bb7d6; 
+	border-radius : 0.5em;
 }
-
-.headerMenu {
-	display: inline-block;
-	position: relative;
+.headerMenu{
+	display : inline-block;
+	position : relative;
 	bottom: 75%;
-	float: right;
-	color: #9bb7d6;
+	float : right;
+	color : #9bb7d6;
 }
-
-.serchDTL {
-	display: inline-block;
-	position: relative;
-	float: left;
-	left: 18.5%;
-	bottom: 20%;
+.serchDTL{
+	display : inline-block;
+	position : relative;
+	float : left;
+	left : 18.5%;
+	bottom: 20%;	
 }
-
-.searchDTLBTN {
-	height: 30px;
-	background-color: #9bb7d6;
-	border-radius: 0.5em;
+.searchDTLBTN{
+	height : 30px;
+	background-color: #9bb7d6; 
+	border-radius : 0.5em;
 }
-
 /* 헤더 CSS 종료 */
 
 /* sidebar CSS */
 #sidebarContainer {
-	position: absolute;
-	top: 560px;
-	right: 50%;
-	margin-right: -670px;
-	width: 13%;
+	position:absolute; 
+	top:560px; 
+	right:50%; 
+	margin-right:-670px;
+	width : 13%;
 }
 
-.sidebarImg {
-	width: 100%;
+.sidebarImg { 
+	width : 100%;
 }
-
 /* sidebar CSS 종료 */
 
 /* Footer CSS */
 .footer {
-	position: relative;
-	left: 0;
-	bottom: 0px;
-	width: 100%;
-	padding: 30px 0;
-
+    position:relative;
+    left: 0;
+    bottom: 0px;
+    width: 100%;
+	padding: 30px 0 ;
+	
 	text-align: left;
 	size: 15px;
 	color: white;
 	background: #9bb7d6;
 }
-
-.select * {
-	font-weight: bold;
+.select *{
+	font-weight:bold;
 	vertical-align: middle;
 	text-decoration: none;
 }
-
-.select,
-.info {
+.select, .info {
 	padding-left: 30px;
 }
-
 /* Footer CSS 종료 */
 
 /* mainslider CSS */
@@ -126,8 +114,7 @@
 	display: none;
 }
 
-.prev,
-.next {
+.prev, .next {
 	cursor: pointer;
 	position: absolute;
 	top: 50%;
@@ -147,8 +134,7 @@
 	border-radius: 3px 0 0 3px;
 }
 
-.prev:hover,
-.next:hover {
+.prev:hover, .next:hover {
 	background-color: rgba(0, 0, 0, 0.8);
 }
 
@@ -181,8 +167,7 @@
 	transition: background-color 0.6s ease;
 }
 
-.active,
-.dot:hover {
+.active, .dot:hover {
 	background-color: #717171;
 }
 
@@ -192,152 +177,4 @@
 	animation-name: fade;
 	animation-duration: 1.5s;
 }
-
 /* mainslider CSS 종료*/
-
-/* mainsection CSS */
-section {
-	margin: 0 auto;
-	overflow: visible;
-
-}
-
-#menubox {
-	width: 1400px;
-	height: 50px;
-	margin: auto;
-}
-
-#menulist {
-	display: flex;
-	text-align: center;
-	list-style-type: none;
-}
-
-.top10list {
-	flex-direction: row;
-	background-color: #9bb7d6;
-	border: 1px solid #9bb7d6;
-	font-size: 17px;
-	width: 160px;
-	height: 50px;
-	display: block;
-	font-weight: bold;
-	margin: auto;
-	margin-right: 5px;
-	cursor: pointer;
-}
-
-.top10head {
-	text-align: left;
-	width: 400px;
-	padding: 20px 0 30px 40px;
-	margin: 0 200px 0 0;
-	font-size: 1.7em;
-}
-
-.list-image {
-	border: 1px solid black;
-	width: 300px;
-	height: 250px;
-	margin-left: 30px;
-}
-
-.list-info {
-	margin-top: 10px;
-	width: 240px;
-	height: 45px;
-}
-
-.swiper-container {
-	margin-top: 20px;
-	width: 1300px;
-}
-
-.swiper-wrapper {
-	display: flex;
-	height: 300px;
-}
-
-.swiper-slide {
-	flex-direction: row;
-	box-sizing: border-box;
-	padding: 0 0 0 30px;
-	opacity: 0.4;
-	transition: opacity 0.3s;
-}
-
-
-
-.swiper-slide-active,
-.swiper-slide-active+.swiper-slide,
-.swiper-slide-active+.swiper-slide+.swiper-slide {
-	opacity: 1
-}
-
-.slide-image {
-	width: 100%;
-	height: 200px;
-	margin-left: 10px;
-	cursor: pointer;
-}
-
-.slide-image2 {
-	width: 240px;
-	height: 200px;
-	margin-left: 10px;
-	cursor: pointer;
-}
-
-.slide-image3 {
-	width: 240px;
-	height: 200px;
-	margin-left: 10px;
-	cursor: pointer;
-}
-
-.view-more {
-	text-align: right;
-	margin-right: 30px;
-}
-
-.view-more a {
-	color: gray;
-}
-
-.list-info-name {
-	text-align: right;
-	font-size: 1.3em;
-	margin: 0 80px 0 25px;
-}
-
-.list-info-value {
-	text-align: left;
-	font-size: 1.3em;
-}
-
-#place_cate {
-	margin-left: auto;
-	margin-right: auto;
-	display: flex;
-	height: 150px;
-	width: 1400px;
-	margin-bottom: 70px;
-}
-
-.place_circle {
-	cursor: pointer;
-	flex-direction: row;
-	border: 1px solid black;
-	margin: auto;
-	margin: 30px 80px 100px 200px;
-	width: 140px;
-	height: 140px;
-	border: 1px solid black;
-	border-radius: 50%;
-	text-align: center;
-	font-size: 1.7em;
-	line-height: 140px;
-	font-weight: bold;
-}
-/* mainsection CSS 종료*/
