--- a/Teamplay_pre/src/main/webapp/main/MainStyle.css
+++ b/Teamplay_pre/src/main/webapp/main/MainStyle.css
@@ -178,3 +178,149 @@
 	animation-duration: 1.5s;
 }
 /* mainslider CSS 종료*/
+
+/* mainsection CSS */
+section {
+	margin: 0 auto;
+	overflow: visible;
+
+}
+
+#menubox {
+	width: 1400px;
+	height: 50px;
+	margin: auto;
+}
+
+#menulist {
+	display: flex;
+	text-align: center;
+	list-style-type: none;
+}
+
+.top10list {
+	flex-direction: row;
+	background-color: #9bb7d6;
+	border: 1px solid #9bb7d6;
+	font-size: 17px;
+	width: 160px;
+	height: 50px;
+	display: block;
+	font-weight: bold;
+	margin: auto;
+	margin-right: 5px;
+	cursor: pointer;
+}
+
+.top10head {
+	text-align: left;
+	width: 400px;
+	padding: 20px 0 30px 40px;
+	margin: 0 200px 0 0;
+	font-size: 1.7em;
+}
+
+.list-image {
+	border: 1px solid black;
+	width: 300px;
+	height: 250px;
+	margin-left: 30px;
+}
+
+.list-info {
+	margin-top: 10px;
+	width: 240px;
+	height: 45px;
+}
+
+.swiper-container {
+	margin-top: 20px;
+	width: 1300px;
+}
+
+.swiper-wrapper {
+	display: flex;
+	height: 300px;
+}
+
+.swiper-slide {
+	flex-direction: row;
+	box-sizing: border-box;
+	padding: 0 0 0 30px;
+	opacity: 0.4;
+	transition: opacity 0.3s;
+}
+
+
+
+.swiper-slide-active,
+.swiper-slide-active+.swiper-slide,
+.swiper-slide-active+.swiper-slide+.swiper-slide {
+	opacity: 1
+}
+
+.slide-image {
+	width: 100%;
+	height: 200px;
+	margin-left: 10px;
+	cursor: pointer;
+}
+
+.slide-image2 {
+	width: 240px;
+	height: 200px;
+	margin-left: 10px;
+	cursor: pointer;
+}
+
+.slide-image3 {
+	width: 240px;
+	height: 200px;
+	margin-left: 10px;
+	cursor: pointer;
+}
+
+.view-more {
+	text-align: right;
+	margin-right: 30px;
+}
+
+.view-more a {
+	color: gray;
+}
+
+.list-info-name {
+	text-align: right;
+	font-size: 1.3em;
+	margin: 0 80px 0 25px;
+}
+
+.list-info-value {
+	text-align: left;
+	font-size: 1.3em;
+}
+
+#place_cate {
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	height: 150px;
+	width: 1400px;
+	margin-bottom: 70px;
+}
+
+.place_circle {
+	cursor: pointer;
+	flex-direction: row;
+	border: 1px solid black;
+	margin: auto;
+	margin: 30px 80px 100px 200px;
+	width: 140px;
+	height: 140px;
+	border: 1px solid black;
+	border-radius: 50%;
+	text-align: center;
+	font-size: 1.7em;
+	line-height: 140px;
+	font-weight: bold;
+}
