--- a/Teamplay_pre/src/main/webapp/main/MainStyle.css
+++ b/Teamplay_pre/src/main/webapp/main/MainStyle.css
@@ -181,13 +181,14 @@
 
 /* mainsection CSS */
 section {
-	margin: 0 auto;
+	margin-right: 100px;
 	overflow: visible;
-	width: 1300px;
+	width: 70%;
+	
 }
 
 #menubox {
-	width: 1300px;
+	width: 1100px;
 	height: 50px;
 	margin: auto;
 }
@@ -313,7 +314,7 @@ section {
 	flex-direction: row;
 	border: 1px solid black;
 	margin: auto;
-	margin: 30px 80px 100px 150px;
+	margin: 30px 80px 100px 200px;
 	width: 150px;
 	height: 150px;
 	border: 1px solid black;
