--- a/Teamplay_pre/src/main/webapp/place/restaurants/restaurants.css
+++ b/Teamplay_pre/src/main/webapp/place/restaurants/restaurants.css
@@ -2,7 +2,7 @@
 	파 일명 칭   : restaurants.css
 	작 성 자    : 정 원 영
 	업데이트 날짜 : 2022. 07. 06 수
-	수 정 날 짜  : 
+	수 정 날 짜  : 2022. 07. 07 목
 	기  능      : 매장 css 
 */
 @charset "UTF-8";
@@ -15,8 +15,141 @@
 }
 /* 헤더 CSS 종료 */
 
-/* 상단 슬라이드 CSS*/
+/* slide CSS*/
+.swiper-container {
+	margin-top: 20px;
+	width: 95%;
+	height: 350px;
+}
 
+.swiper-wrapper {
+	display: flex;
+	height: 345px;
+}
 
+.swiper-slide {
+	width: 20%;
+	height: 345px;
+	flex-direction: row;
+	opacity: 0.4;
+	transition: opacity 0.3s;
+}
 
-/* 상단 슬라이드 CSS 종료*/
+.slideMainImage {
+	width: 100%;
+	height: 395px;
+	border: 1px solid blue;
+}
+
+.swiper-slide-active, .swiper-slide-active+.swiper-slide,
+	.swiper-slide-active+.swiper-slide+.swiper-slide, .swiper-slide-active+.swiper-slide+.swiper-slide+.swiper-slide
+	{
+	opacity: 1
+}
+
+.image-more {
+	margin-top: 10px;
+	width: 100%;
+	text-align: right;
+	border: 1px solid red;
+}
+
+.image-more a {
+	padding-right: 200px;
+	color: gray;
+	font-size: 25px;
+	text-decoration: none;
+}
+
+.restaurants-view {
+	display: flex;
+	width: 80%;
+	height: 500px;
+	margin: auto;
+	margin-top: 100px;
+}
+
+.restaurants-info {
+	decoration: row;
+	width: 50%;
+	height: 600px;
+}
+
+.restaurants-map {
+	decoration: row;
+	width: 50%;
+	border: 1px solid blue;
+	height: 400px;
+	margin-top: 30px;
+	margin-left: 100px;
+	padding: 20px;
+}
+
+.restaurants-info {
+	width: 50%;
+	height: 500px;
+}
+
+.restaurants-info-head {
+	display: flex;
+	width: 100%;
+	height: 60px;
+}
+
+.restaurants-count {
+	decoration: row;
+}
+
+.restaurants-detail {
+	padding-top: 20px;
+	width: 90%;
+	height: 300px;
+	margin: auto;
+	font-size: 23px;
+	border-top: 1px solid black;
+}
+
+.restaurants-detail td {
+	padding-left: 40px;
+}
+
+.restaurants-name {
+	font-size: 35px;
+	font-weight: bold;
+	margin: auto;
+}
+
+.restaurants-steamed {
+	width: 10%;
+	margin-right: 20px;
+	text-align: right;
+	border: 1px solid red;
+}
+
+.restaurants-count-info {
+	font-size: 30px;
+	font-weight: bold;
+	padding-left: 35px;
+}
+
+.restaurants-fixInfo {
+	font-size: 0.9em;
+	padding-top: 20px;
+	padding-left: 10px;
+}
+
+.restaurants-info-update {
+	color: gray;
+	margin-top: 25px;
+	text-align: right;
+}
+/* slide CSS 종료*/
+
+/* review section */
+.review-section {
+	width: 80%;
+	height: 1200px;
+	border: 1px solid green;
+	margin: auto;
+	margin-top: 150px;
+}
