--- a/Teamplay_pre/src/main/webapp/eventPage/event.css
+++ b/Teamplay_pre/src/main/webapp/eventPage/event.css
@@ -276,3 +276,54 @@ span{
 	text-align : center;
 	margin : auto;
 }
+/* 이벤트 글쓰기 */
+.eventWriter{
+	border-bottom : solid 1px black;
+	width : 95%;
+	padding : 20px;
+}
+#selectBox {
+	margin : 0px auto;
+	width : 95%;
+	height : 100%;
+}
+#boarderSelect {
+	margin : 10px;
+	width: 59%;
+	font-size : 20px;
+}
+#writeHeaderSelect{
+	margin : 10px;
+	width: 27%;
+	font-size : 20px;
+}
+#eventTitle{
+	width : 80%;
+	height : 36px;
+	margin-left : 40px;
+}
+#eventContent {
+	width : 80%;
+	height : 506px;
+	margin : 20px 0 10px 40px;
+}
+#eventFile {
+	margin : 10px auto;
+	width : 80%;
+}
+.fileBox{
+	border : 1px solid #A4A4A4;
+	border-radius : 0.2em;
+	width: 70%;
+}
+#eventWriteBtn {
+	margin : 10px auto;
+	position : relative;
+	left : 40px;
+}
+.eventBtn{
+	width : 80px;
+	height : 40px;
+	border-radius : 0.4em;
+}
+
