--- a/Teamplay_pre/src/main/webapp/eventPage/event.css
+++ b/Teamplay_pre/src/main/webapp/eventPage/event.css
@@ -310,4 +310,12 @@ table{
 	height : 40px;
 	border-radius : 0.4em;
 }
+#eventWriteBtn {
+	float : right;
+	left : 10px;
+	width : 90px;
+	height : 40px;
+	font-size : 16px;
+	border-radius : 0.4em;
+}
 /* 이벤트 글쓰기 종료 */
