feat restaruant info list method
feat restaruant info list

--- a/_HUGO/src/main/webapp/resources/css/restaurants.css
+++ b/_HUGO/src/main/webapp/resources/css/restaurants.css
@@ -66,25 +66,22 @@
 	height: 500px;
 	margin: auto;
 	margin-top: 50px;
+	font-size:0.8em;
 }
 
 .restaurants-info {
 	width: 50%;
-	height: 600px;
+	height: 700px;
 }
 
 .restaurants-map {
-	width: 50%;
-	height: 400px;
+	width: 60%;
+	height: 600px;
 	margin-top: 30px;
 	margin-left: 100px;
 	padding: 20px;
 }
 
-.restaurants-info {
-	width: 50%;
-	height: 500px;
-}
 
 .restaurants-info-head {
 	display: flex;
@@ -93,7 +90,7 @@
 }
 
 .restaurants-detail {
-	padding-top: 20px;
+	padding-top: 10px;
 	width: 90%;
 	height: 300px;
 	margin: auto;
@@ -149,7 +146,7 @@ a {
 .restaurants-review-section {
 	width: 80%;
 	margin: auto;
-	margin-top: 100px;
+	margin-top: 200px;
 }
 
 .restaurants-review-header {
