--- a/_HUGO/src/main/webapp/resources/css/event.css
+++ b/_HUGO/src/main/webapp/resources/css/event.css
@@ -283,6 +283,11 @@ table{
 	width: 27%;
 	font-size : 20px;
 }
+#eventPeriod{
+	margin : 0 auto;
+	width : 95%;
+	padding-bottom : 10px;
+}
 #eventTitle{
 	width : 80%;
 	height : 36px;
