--- a/_HUGO/src/main/webapp/resources/css/main.css
+++ b/_HUGO/src/main/webapp/resources/css/main.css
@@ -229,7 +229,7 @@ section {
 	display: block;
 	font-weight: bold;
 	margin: auto;
-	margin-right: 20px;
+	margin-right: 60px;
 	cursor: pointer;
 }
 
@@ -249,14 +249,17 @@ section {
 }
 
 .list-info {
-	margin-top: 10px;
-	width: 240px;
+	margin-top: 20px;
+	width: 300px;
 	height: 45px;
+	display:flex;
+	flex-direction:row;
+	margin-left:20px;
 }
 
 .swiper-container {
 	margin:auto;
-	margin-top: 20px;
+	margin-top: 60px;
 	width: 1200px;
 }
 
@@ -312,14 +315,16 @@ section {
 }
 
 .list-info-name {
+	padding-top:10px;
 	text-align: right;
-	font-size: 1.3em;
-	margin: 0 80px 0 25px;
+	font-size: 1.1em;
+	margin: 0 20px 0 10px;
 }
 
 .list-info-value {
-	text-align: left;
-	font-size: 1.3em;
+	padding-top:5px;
+	margin-left:10px;
+	font-size: 1.5em;
 }
 
 #place_cate {
