--- a/_HUGO/src/main/webapp/resources/css/restaurants.css
+++ b/_HUGO/src/main/webapp/resources/css/restaurants.css
@@ -685,3 +685,121 @@ a:active {
 	opacity: 1;
 }
 /* photo more 팝업창 css 종*/
+
+/* list top 50 페이지 */
+
+.top50List{
+	margin:auto;
+	margin-top : 100px;
+	margin-bottom : 100px;
+}
+.restaurant_top50List_head{
+	font-size:3em;
+	text-align:center;
+	color: #9bb7d6;
+}
+.restaurant_top50List_array{
+	width:100%;
+	border-bottom:2px solid #9bb7d6;
+	padding-bottom:20px;
+}
+.restaurant_top50List_array_ul{
+	  list-style:none;
+	  display:flex;
+	  flex-decoration:row;
+	  margin:auto;
+	  
+}
+.restaurant_top50List_array_ul li{
+	padding: 10px 5px 10px 5px;
+	margin-left: 100px;
+	text-align:center;
+	
+	font-size: 1.5em;
+
+}
+
+#restaurantList{
+	width: 100%;
+	height: 300px;
+	display: flex;
+	flex-docoration:row;
+	padding : 30px 0 30px 10px;
+}
+.restaurantList_info{
+	width:50%;
+	height: 240px;
+	margin-left:30px;
+}
+.restaurantList_image{
+	width:30%;
+	border:1px solid black;
+	hegiht: 260px;
+}
+.restaurantList_info_head{
+	width: 100%;
+	height: 40px;
+	font-size:2em;
+	padding-left:10px;
+	font-weight:bold;
+	margin-bottom:5px;
+}
+.restaurantList_address{	
+	display:flex;
+	flex-decoration:row;
+	margin-top:5px;
+	height: 60px;
+	padding-top:5px;
+}
+.restaurantList_imoji{
+	line-height:60px;
+	margin-right: 30px;
+}
+.restaurantList_address_address{
+	font-size:1.1em;
+	
+}
+.restaurantList_jibun{
+	border:1px solid #d3d3d3;
+	color: white;
+	background-color:#d3d3d3;
+}
+.restaurantList_open_info{
+	display : flex;
+	flex-decoration:row;
+}
+.restaurantList_openTime{
+	line-height: 65px;
+	font-size:1.2em;
+}
+.restaurantList_phone_info{
+	display : flex;
+	flex-decoration:row;
+}
+.restaurantList_phone{
+	line-height: 60px;
+	font-size:1.2em;
+}
+.restaurantList_most{
+	width: 15%;
+}
+.restaurantList_more{
+	border: 1px solid #9bb7d6;
+	width: 80%;
+	margin:auto;
+	margin-top:150px;
+	height:50px;
+	background-color: #9bb7d6;
+	
+}
+.restaurantList_more a{
+	line-height: 50px;	
+	margin:auto;
+	margin-left:5px;
+	text-decoration:none;
+	font-size:1.1em;
+	color:white;
+}
+.restaurantsList-count-info{
+	font-size: 1.2em;
+}
