--- a/_HUGO/src/main/webapp/resources/css/event.css
+++ b/_HUGO/src/main/webapp/resources/css/event.css
@@ -273,7 +273,15 @@ table{
 	text-align: right;
     padding-right: 5%;
 }
-
+#replyId {
+	width : 100px;
+}
+#replyDelete {
+	float : right;
+	margin-right:20px;
+	margin-top:5px;
+	cursor: pointer;
+}
     
 /* eventDTL 종료 */
 
