--- a/_HUGO/src/main/webapp/resources/css/restaurants.css
+++ b/_HUGO/src/main/webapp/resources/css/restaurants.css
@@ -1,31 +1,36 @@
 @charset "UTF-8";
 
 /* slide CSS*/
+#restaurantView_body{
+	width: 100%;
+	
+}
 .swiper-container {
 	margin-top: 40px;
 	width: 100%;
 	height: 45%;
-	border:1px solid green;
 }
 
 .swiper-wrapper {
 	display: flex;
 	flex-direction: row;
 	height: 100%;
+	width: 90%;
 }
 
 .swiper-slide {
-	width: 25%;
+	width: 30%;
 	height: 380px;
 	opacity: 0.4;
 	transition: opacity 0.3s;
 }
 
 .slideMainImage {
+	border:5px solid #9bb7d6;
+	margin-left: 30px;
 	margin-top: 20px;
-	width: 90%;
-	height: 320px;
-	border: 1px solid blue;
+	width: 82%;
+	height: 250px;
 	cursor: pointer;
 }
 
@@ -53,7 +58,7 @@
 }
 
 .image-more a {
-	padding-right: 200px;
+	padding-right: 240px;
 	color: gray;
 	font-size: 25px;
 	text-decoration: none;
@@ -84,7 +89,7 @@
 #map{
 	width:100%; 
 	height:500px;
-	border: 3px solid black;
+	border: 5px solid #9bb7d6;
 }
 
 
@@ -152,6 +157,7 @@ a {
 	width: 80%;
 	margin: auto;
 	margin-top: 200px;
+	margin-bottom: 200px;
 }
 
 .restaurants-review-header {
@@ -192,7 +198,6 @@ a {
 	flex-direction: row;
 	width: 100%;
 	border-bottom: 1px solid gray;
-	height: 300px;
 }
 
 .restaurants-review-head {
@@ -202,7 +207,8 @@ a {
 
 .restaurants-review-contents {
 	width: 60%;
-	height: 300px;
+	height: 200px;
+	font-size:0.9em;
 }
 
 .restaurants-review-steamed {
@@ -232,6 +238,7 @@ a {
 	font-size: 1.7em;
 	line-height: 140px;
 	font-weight: bold;
+	margin-left:70px;
 }
 
 .restaurants-review-head-name {
@@ -241,6 +248,8 @@ a {
 	text-align: center;
 	margin-top: 20px;
 	font-weight: bold;
+	font-size:1.2em;
+	color:#9bb7d6;
 }
 
 .restaurants-review-head-star5 {
@@ -263,7 +272,13 @@ a {
 	padding: 30px 0 30px 30px;
 	width: 80%;
 	height: 100px;
-	font-size: 1.3em;
+	text-overflow: ellipsis;
+ 	overflow     : hidden;
+}
+
+.restaurants-review-contents-txt p{
+   
+   
 }
 
 .restaurants-review-contents-txt a {
@@ -272,10 +287,12 @@ a {
 }
 
 .restaurants-review-contents-image {
+	margin-top: 60px;
+	margin-left: 30px;
 	display: flex;
 	flex-direction: row;
 	width: 100%;
-	height: 135px;
+	height: 120px;
 }
 
 .restaurants-review-contents-imageInfo {
@@ -630,7 +647,7 @@ a:active {
 
 /* photo more 팝업창 css*/
 .restaurants-photo-wrap {
-	margin-top: 30px;
+	margin-top: 250px;
 	width: 100%;
 	height: 100%;
 	margin: auto;
@@ -640,14 +657,16 @@ a:active {
 	width: 80%;
 	height: 80%;
 	margin: 20px auto;
+	padding-top:100px;
 }
 
 .swiper-slide-container {
+	margin-top:200px;
 	text-align: center;
 	font-size: 18px;
 	background: #fff;
 	height: 95%;
-	max-width: 600px;
+	max-width: 800px;
 	margin: auto;
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -661,28 +680,11 @@ a:active {
 	-ms-flex-align: center;
 	-webkit-align-items: center;
 	align-items: center;
-	border: 1px solid green;
 }
 
 .gallery-top {
-	height: 70%;
+	height: 80%;
 	width: 80%;
-}
-
-.gallery-thumbs {
-	height: 20%;
-	box-sizing: border-box;
-	padding: 10px 0;
-}
-
-.gallery-thumbs .swiper-slide {
-	width: 15%;
-	height: 100%;
-	opacity: 0.4;
-}
-
-.gallery-thumbs .swiper-slide-active {
-	opacity: 1;
 }
 /* photo more 팝업창 css 종*/
 
@@ -752,7 +754,7 @@ a:active {
 	padding-top:5px;
 }
 .restaurantList_imoji{
-	line-height:60px;
+	line-height:50px;
 	margin-right: 30px;
 }
 .restaurantList_address_address{
@@ -777,7 +779,7 @@ a:active {
 	flex-decoration:row;
 }
 .restaurantList_phone{
-	line-height: 60px;
+	line-height: 50px;
 	font-size:1.2em;
 }
 .restaurantList_most{
@@ -802,4 +804,10 @@ a:active {
 }
 .restaurantsList-count-info{
 	font-size: 1.2em;
+}
+.restaurant_top50List_arrayList{
+	color: #9bb7d6;
+}
+.restaurant_top50List_arrayList:hover{
+	color: #9bb7d6;
 }
