--- a/_HUGO/src/main/webapp/resources/css/restaurants.css
+++ b/_HUGO/src/main/webapp/resources/css/restaurants.css
@@ -403,6 +403,8 @@ a:active {
 }
 
 .restaurants_review_info_out {
+	background-color: #9bb7d6;
+	color:white;
 	border: 2px solid black;
 	width: 6%;
 	height: 25%;
