--- a/_HUGO/src/main/webapp/resources/css/restaurants.css
+++ b/_HUGO/src/main/webapp/resources/css/restaurants.css
@@ -47,7 +47,8 @@
 	height: 100%;
 	line-height: 30px;
 	background-color: white;
-	border: white; color : #9bb7d6;
+	border: white;
+	color: #9bb7d6;
 	cursor: pointer;
 	color: #9bb7d6;
 }
@@ -643,10 +644,10 @@ a:active {
 	height: 10%;
 	text-align: center;
 }
-.restaurants-review-title{
+
+.restaurants-review-title {
 	font-size: 1.2em;
-	font-weight: bold;	
-	
+	font-weight: bold;
 }
 
 #restaurant-review-write-modify {
@@ -733,12 +734,12 @@ a:active {
 .restaurant_top50List_head {
 	font-size: 3em;
 	text-align: center;
-	color: #9bb7d6;
+	color: #135aab;
 }
 
 .restaurant_top50List_array {
 	width: 100%;
-	border-bottom: 2px solid #9bb7d6;
+	border-bottom: 5px solid #9bb7d6;
 	padding-bottom: 20px;
 }
 
@@ -747,18 +748,22 @@ a:active {
 	display: flex;
 	flex-decoration: row;
 	margin: auto;
+	width: 70%;
 }
 
 .restaurant_top50List_array_ul li {
-	padding: 10px 5px 10px 5px;
-	margin-left: 100px;
+	padding: 30px 5px 10px 5px;
+	margin-left: 70px;
 	text-align: center;
 	font-size: 1.5em;
+	margin: auto;
 }
 
 #restaurantList {
+	border: 5px solid #9bb7d6;
+	margin-top: 50px;
 	width: 100%;
-	height: 300px;
+	height: 350px;
 	display: flex;
 	flex-docoration: row;
 	padding: 30px 0 30px 10px;
@@ -771,20 +776,20 @@ a:active {
 }
 
 .restaurantList_image {
-	cursor:pointer;
+	cursor: pointer;
 	width: 30%;
-	border: 1px solid black;
+	border: 3px solid #9bb7d6;
 	hegiht: 260px;
 }
 
 .restaurantList_info_head {
-	cursor:pointer;
+	margin-top:10px;
+	cursor: pointer;
 	width: 100%;
 	height: 40px;
-	font-size: 2em;
+	font-size: 2.4em;
 	padding-left: 10px;
 	font-weight: bold;
-	margin-bottom: 5px;
 }
 
 .restaurantList_address {
@@ -798,10 +803,13 @@ a:active {
 .restaurantList_imoji {
 	line-height: 50px;
 	margin-right: 30px;
+	font-size: 2em;
 }
 
 .restaurantList_address_address {
-	font-size: 1.1em;
+	margin-top: 10px;
+	font-size: 1.2em;
+	font-weight: bold;
 }
 
 .restaurantList_jibun {
@@ -811,16 +819,19 @@ a:active {
 }
 
 .restaurantList_open_info {
+	margin-top: 10px;
 	display: flex;
 	flex-decoration: row;
 }
 
 .restaurantList_openTime {
-	line-height: 65px;
+	line-height: 50px;
 	font-size: 1.2em;
+	font-weight: bold;
 }
 
 .restaurantList_phone_info {
+	margin-top: 5px;
 	display: flex;
 	flex-decoration: row;
 }
@@ -828,32 +839,37 @@ a:active {
 .restaurantList_phone {
 	line-height: 50px;
 	font-size: 1.2em;
+	font-weight: bold;
 }
 
 .restaurantList_most {
 	width: 15%;
+	margin-right:50px;
 }
 
 .restaurantList_more {
 	border: 1px solid #9bb7d6;
-	width: 80%;
+	width: 200px;
 	margin: auto;
-	margin-top: 150px;
+	text-align: center;
+	margin-top: 230px;
 	height: 50px;
+	margin-right:50px;
 	background-color: #9bb7d6;
 }
 
 .restaurantList_more a {
 	line-height: 50px;
 	margin: auto;
-	margin-left: 5px;
 	text-decoration: none;
 	font-size: 1.1em;
 	color: white;
 }
 
 .restaurantsList-count-info {
-	font-size: 1.2em;
+	font-size: 2em;
+	font-weight: bold;
+	margin-right: 20px;
 }
 
 .restaurant_top50List_arrayList {
@@ -862,4 +878,9 @@ a:active {
 
 .restaurant_top50List_arrayList:hover {
 	color: #9bb7d6;
+}
+
+.restaurantList-count {
+	margin-top: 10px;
+	height: 50px;
 }
